# paro-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  best-practices.md
example/complex-example/: Cargo.toml  tauri.conf.json
example/complex-example/src/: data_generation.rs  main.rs  router.rs  state.rs
example/complex-example/src/pages/: add.rs  edit.rs  home.rs  layout.rs  list.rs  mod.rs  navigation.rs
example/complex-example/static/: index.html  paro.js  styles.css
example/minimal-counter/: Cargo.toml  tauri.conf.json
example/minimal-counter/src/: main.rs
example/minimal-counter/static/: index.html  paro.js
src/: lib.rs  paro.js
