[package]
name = "paro-rs"
version = "0.0.1"
edition = "2021"
description = "An opinionated way to develop tauri desktop applications where you do not write any client code (no javascript, no webassembly) as all html rendering and event handling is done inside your tauri application and pâro has the minimal client code that is still required already done for you."
repository = "https://github.com/grayfallstown/paro-rs"
license = "MIT OR Apache-2.0"
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
