[package]
name = "complex-example"
version = "0.0.7"
edition = "2021"
build = "src/build.rs"

[dependencies]
paro-rs = { path = "../../" }
# paro-rs = "0.0.7"
maud = "0.24.0"
tauri = { version = "1.2.3", features = ["api-all"] }
tokio = { version = "1.11", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-util = "0.3"
chrono = "0.4.23"
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
rand = "0.8.5"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
