[package]
name = "minimal-counter"
version = "0.0.3"
edition = "2021"
build = "src/build.rs"

[dependencies]
# paro-rs = { path = "../../" }
paro-rs = "0.0"
uuid = { version = "1.2.2", features= ["v4", "fast-rng"] }
maud = "0.24.0"
tauri = { version = "1.2.3", features = [] }
tokio = { version = "1.11", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
futures-util = "0.3"
chrono = "0.4.23"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies.tauri-plugin-websocket]
git = "https://github.com/tauri-apps/tauri-plugin-websocket"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
